# My-CTF-Challenge

./: .gitignore  .gitmodules  Readme.md
AIS3-EOF/2026-qual/cookie-monster-viewer/: Dockerfile  app.py  docker-compose.yml  flag.txt
AIS3-preexam/2024/pyjail/: Dockerfile  xinetd
AIS3-preexam/2025/: Readme.md
AIS3-preexam/2025/nocall/: docker-compose.yml  exploit.py
AIS3-preexam/2025/nocall-revenge/: docker-compose.yml  exploit.py
AIS3-preexam2024/: Readme.md
AIS3-preexam2024/pyjail/: docker-compose.yml
AIS3-preexam2024/pyjail/share/: run.sh  (+2 more)
SCIST/2023-final/: Readme.md
SCIST/2023-final/CrossStyleSheets/web/: Dockerfile  main.py  pyproject.toml
SCIST/2023-final/CrossStyleSheets/web/templates/: home.html  report.html
SCIST/2024-final/: Readme.md
SCIST/2025-midterm/: pack_deploy.sh
TSCCTF-2024/: Readmd.md
TSCCTF-2024/exchange/: docker-compose.yml
TSCCTF-2024/normal_website/: docker-compose.yml
TSCCTF-2024/swirl/: docker-compose.yml
TSCCTF/2024/: Readme.md
TSCCTF/2025/: Readme.md  pack_deploy.sh
cggc/2024-final/: Readme.md
cggc/2024-qual/: Readme.md
cggc_2024_qual/: Readme.md
cggc_2024_qual/breakjail/: xinetd
cggc_2024_qual/breakjail-archived/: flag
cggc_2024_qual/previewsite/: Dockerfile
cggc_2024_qual/sol/: breakjail-online.py
scist-2023-final/: Readme.md
scist-2023-final/CrossStyleSheets/: exploit.py
scist-2023-final/fakelog-sql/: exploit.sh
scist-2024-final/: Readme.md  docker-compose.yml
scist-2024-final/formatter/: flag
scist-2024-final/pyjail1/: Dockerfile
scist-2024-final/pyjail2/: Dockerfile  flag  gen.py
(+188 files in other folders)
